force-app/main/default/objects/Sales_Data__c/Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Sales Data</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Sales Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>