force-app/main/default/objects/Sales_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use the lookup link to locate the account you are adding a new Forecast Record to.</description>
    <inlineHelpText>Use the lookup link to locate the account you are adding a new Forecast Record to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Data</relationshipLabel>
    <relationshipName>Sales_Records</relationshipName>
    <type>Lookup</type>
</CustomField>