force-app/main/default/objects/Sales_Data__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <inlineHelpText>Starting in 2020, Actual Amount represents Shipped Sales. All other years represent Invoiced Sales.</inlineHelpText>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>