force-app/main/default/objects/Sales_Data__c/fields/Actual_Forecast_Units__c.field-meta.xml
<CustomField>
    <fullName>Actual_Forecast_Units__c</fullName>
    <formula>if( 
Period_End_Date__c &lt; (today()-2), 
Actual_Units__c , 
Forecast_Units__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual/Forecast Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>