force-app/main/default/objects/Sales_Data__c/fields/Actual_Forecast_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Forecast_USD__c</fullName>
    <formula>if( 
Period_End_Date__c &lt; (today()-2), 
  Actual_Amount__c   , 
 Forecast_USD__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Starting in 2020, Actual Amount represents Shipped Sales. All other years represent Invoiced Sales.</inlineHelpText>
    <label>Actual/Forecast USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>