force-app/main/default/objects/Sales_Data__c/fields/Actual_Units__c.field-meta.xml
<CustomField>
    <fullName>Actual_Units__c</fullName>
    <label>Actual Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>