force-app/main/default/objects/Sales_Data__c/fields/Budget_Act_Fcst_Check__c.field-meta.xml
<CustomField>
    <fullName>Budget_Act_Fcst_Check__c</fullName>
    <formula>Actual_Forecast_USD__c + Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget - Act/Fcst Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>