force-app/main/default/objects/Sales_Data__c/fields/Budget_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount_USD__c</fullName>
    <formula>IF 
( 
Owner:User.Canadian_User__c = true, 

(if 
( Year__c =&apos;2014&apos;,(  Budget_Amount__c  /1.05),

(if 
( Year__c =&apos;2015&apos;,(  Budget_Amount__c  /1.10),

(if 
( Year__c =&apos;2016&apos;,(  Budget_Amount__c  /1.30),

 Budget_Amount__c  )))))), 

Budget_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Amount - USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>