force-app/main/default/objects/Sales_Data__c/fields/Budget_FCST_ACT__c.field-meta.xml
<CustomField>
    <fullName>Budget_FCST_ACT__c</fullName>
    <formula>Actual_Amount__c + Budget_Amount__c + Forecast_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget+FCST+ACT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>