force-app/main/default/objects/Sales_Data__c/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <label>Business Unit Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>