force-app/main/default/objects/Sales_Data__c/fields/Calculated_GM_USD__c.field-meta.xml
<CustomField>
    <fullName>Calculated_GM_USD__c</fullName>
    <formula>If (
( Period_End_Date__c &lt; TODAY ()),
(If (
( GM__c &lt;&gt; 0),
( GM__c * Actual_Forecast_USD__c ),
( (GMDollars__c / Margin_Sales_Dollars__c )* Actual_Forecast_USD__c )
)),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated GM $ USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>