force-app/main/default/objects/Sales_Data__c/fields/Current_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Reporting_Period__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Current Reporting Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>