force-app/main/default/objects/Sales_Data__c/fields/Customer_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discounts__c</fullName>
    <label>Customer Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>