force-app/main/default/objects/Sales_Data__c/fields/Customer_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rebate__c</fullName>
    <label>Customer Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>