force-app/main/default/objects/Sales_Data__c/fields/ENV_1st_Pass_Budget_Units__c.field-meta.xml
<CustomField>
    <fullName>ENV_1st_Pass_Budget_Units__c</fullName>
    <label>ENV - 1st Pass Budget Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>