force-app/main/default/objects/Sales_Data__c/fields/ENV_Adjusted_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>ENV_Adjusted_Actual_Amount__c</fullName>
    <formula>Actual_Amount__c + ENV_LME_Adjustment__c - ENV_Veritiv_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ENV - Adjusted Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>