force-app/main/default/objects/Sales_Data__c/fields/ENV_Baseline_Amount__c.field-meta.xml
<CustomField>
    <fullName>ENV_Baseline_Amount__c</fullName>
    <label>ENV - Baseline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>