force-app/main/default/objects/Sales_Data__c/fields/ENV_Buyout_Resale_Budget_Sales__c.field-meta.xml
<CustomField>
    <fullName>ENV_Buyout_Resale_Budget_Sales__c</fullName>
    <label>ENV - Buyout/Resale Budget Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>