force-app/main/default/objects/Sales_Data__c/fields/ENV_LME_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ENV_LME_Adjustment__c</fullName>
    <label>ENV - LME Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>