force-app/main/default/objects/Sales_Data__c/fields/ENV_Manufactured_Actual_Units__c.field-meta.xml
<CustomField>
    <fullName>ENV_Manufactured_Actual_Units__c</fullName>
    <label>ENV - Shipment Actual Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>