force-app/main/default/objects/Sales_Data__c/fields/ENV_MTD_Actual__c.field-meta.xml
<CustomField>
    <fullName>ENV_MTD_Actual__c</fullName>
    <label>ENV MTD Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>