force-app/main/default/objects/Sales_Data__c/fields/ENV_MTD_Budget_Var__c.field-meta.xml
<CustomField>
    <fullName>ENV_MTD_Budget_Var__c</fullName>
    <formula>ENV_MTD_Actual__c- Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ENV MTD Budget Var</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>