force-app/main/default/objects/Sales_Data__c/fields/ENV_Variance_to_Baseline__c.field-meta.xml
<CustomField>
    <fullName>ENV_Variance_to_Baseline__c</fullName>
    <formula>ENV_Adjusted_Actual_Amount__c - ENV_Baseline_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ENV - Variance to Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>