force-app/main/default/objects/Sales_Data__c/fields/ENV_Veritiv_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ENV_Veritiv_Adjustment__c</fullName>
    <description>This field should only be used to record Veritiv adjusted sales results</description>
    <inlineHelpText>This field should only be used to record Veritiv adjusted sales results</inlineHelpText>
    <label>ENV - Veritiv Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>