force-app/main/default/objects/Sales_Data__c/fields/Forecast_2_Week_Prior__c.field-meta.xml
<CustomField>
    <fullName>Forecast_2_Week_Prior__c</fullName>
    <label>Forecast 2 Week Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>