force-app/main/default/objects/Sales_Data__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <description>Update the forecast dollar ($) amount.</description>
    <inlineHelpText>Update the forecast dollar ($) amount.</inlineHelpText>
    <label>Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>