force-app/main/default/objects/Sales_Data__c/fields/Forecast_Snapshot_Amount_CM__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Snapshot_Amount_CM__c</fullName>
    <description>Snapshot of forecast dollar amount as of the 11th day of month.</description>
    <inlineHelpText>Snapshot of forecast dollar amount as of the 11th day of month.</inlineHelpText>
    <label>Forecast Snapshot Amount CM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>