force-app/main/default/objects/Sales_Data__c/fields/Forecast_Snapshot_Amount_PM__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Snapshot_Amount_PM__c</fullName>
    <label>Forecast Snapshot Amount PM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>