force-app/main/default/objects/Sales_Data__c/fields/Forecast_Units__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Units__c</fullName>
    <label>Forecast Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>