force-app/main/default/objects/Sales_Data__c/fields/Forecast_USD__c.field-meta.xml
<CustomField>
    <fullName>Forecast_USD__c</fullName>
    <formula>IF
(
  Owner:User.Canadian_User__c  = true,

(if 
( Year__c =&apos;2011&apos;,( Forecast_Amount__c /1.00),

(if
( Year__c =&apos;2012&apos;,( Forecast_Amount__c /0.970),

(if
( Year__c =&apos;2013&apos;,( Forecast_Amount__c /0.980),

(if
( Year__c =&apos;2014&apos;,( Forecast_Amount__c /1.05),

(if
( Year__c =&apos;2015&apos;,( Forecast_Amount__c /1.10),

(if
( Year__c =&apos;2016&apos;,( Forecast_Amount__c /1.30),

Forecast_Amount__c 

)))))))))))),

Forecast_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Amount - USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>