force-app/main/default/objects/Sales_Data__c/fields/Forecast_Variance__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Variance__c</fullName>
    <formula>Forecast_USD__c - Previous_Forecast_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>