force-app/main/default/objects/Sales_Data__c/fields/Forecast_Variance_From_3_Week_Prior__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Variance_From_3_Week_Prior__c</fullName>
    <label>Forecast Variance From 3 Week Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>