force-app/main/default/objects/Sales_Data__c/fields/Forecast_Variance_From_Previous_Week__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Variance_From_Previous_Week__c</fullName>
    <label>Forecast Variance From Previous Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>