force-app/main/default/objects/Sales_Data__c/fields/GM__c.field-meta.xml
<CustomField>
    <fullName>GM__c</fullName>
    <description>Gross Margin %</description>
    <inlineHelpText>Gross Margin %</inlineHelpText>
    <label>GM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>