force-app/main/default/objects/Sales_Data__c/fields/GM_USD__c.field-meta.xml
<CustomField>
    <fullName>GM_USD__c</fullName>
    <formula>IF
(
Owner:User.Canadian_User__c = true,

(if
( Year__c =&apos;2011&apos;,( GMDollars__c /1.00),

(if
( Year__c =&apos;2012&apos;,( GMDollars__c /0.970),

(if
( Year__c =&apos;2013&apos;,( GMDollars__c /0.980),

(if
( Year__c =&apos;2014&apos;,( GMDollars__c /1.05),

(if
( Year__c =&apos;2015&apos;,( GMDollars__c /1.10),

(if
( Year__c =&apos;2016&apos;,( GMDollars__c /1.30),

GMDollars__c

)))))))))))),

GMDollars__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GM $ USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>