force-app/main/default/objects/Sales_Data__c/fields/GMDollars__c.field-meta.xml
<CustomField>
    <fullName>GMDollars__c</fullName>
    <label>GM $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>