force-app/main/default/objects/Sales_Data__c/fields/Historical_Owner__c.field-meta.xml
<CustomField>
    <fullName>Historical_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to keep track of owner of sales data.</description>
    <inlineHelpText>This field indicates historical owner of data and not the current owner of account.</inlineHelpText>
    <label>Historical Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>