force-app/main/default/objects/Sales_Data__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Record Owner Manager</description>
    <label>Mgr Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>