force-app/main/default/objects/Sales_Data__c/fields/Margin_Sales_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Margin_Sales_Dollars__c</fullName>
    <label>Margin Sales Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>