force-app/main/default/objects/Sales_Data__c/fields/Monthly_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Accrual__c</fullName>
    <label>Monthly Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>