force-app/main/default/objects/Sales_Data__c/fields/Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales__c</fullName>
    <formula>Actual_Amount__c - Customer_Discounts__c + Monthly_Accrual__c - Reverse_Accrual__c  -Customer_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>