force-app/main/default/objects/Sales_Data__c/fields/NY_Forecast__c.field-meta.xml
<CustomField>
    <fullName>NY_Forecast__c</fullName>
    <formula>if (Year__c =&quot;2020&quot;,  Forecast_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NY Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>