force-app/main/default/objects/Sales_Data__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Period is used to identify the specific month the sale is coming out of. 

When forecasting, you will only have to add one period/month to the forecast line and the remaining periods will auto-populate for you. 
(ie - January = 1; August = 8)</description>
    <inlineHelpText>Period is used to identify the specific month the sale is coming out of. 

When forecasting, you will only have to add one period/month to the forecast line and the remaining periods will auto-populate for you. 
(ie - January = 1; August = 8)</inlineHelpText>
    <label>Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>