force-app/main/default/objects/Sales_Data__c/fields/Period_End_Date_Chk__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date_Chk__c</fullName>
    <formula>IF(
 Period_End_Date__c &lt; (today ()-15) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period End Date Chk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>