force-app/main/default/objects/Sales_Data__c/fields/Periods_Remaining_to_End_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Periods_Remaining_to_End_of_Year__c</fullName>
    <formula>12-(Period__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periods Remaining to End of Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>