force-app/main/default/objects/Sales_Data__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <formula>Plant_Product__r.Plant__r.Name</formula>
    <label>Plant</label>
    <type>Text</type>
</CustomField>