force-app/main/default/objects/Sales_Data__c/fields/Plant_Product__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use the lookup link to locate the plant product you are relating the Forecast Record to.</description>
    <inlineHelpText>Use the lookup link to locate the plant product you are relating the Forecast Record to.</inlineHelpText>
    <label>Plant Product</label>
    <referenceTo>Plant_Products__c</referenceTo>
    <relationshipLabel>Sales Data</relationshipLabel>
    <relationshipName>Sales_Records</relationshipName>
    <type>Lookup</type>
</CustomField>