force-app/main/default/objects/Sales_Data__c/fields/Previous_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Forecast_Amount__c</fullName>
    <label>Previous Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>