force-app/main/default/objects/Sales_Data__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(Plant_Product__r.Product__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>