force-app/main/default/objects/Sales_Data__c/fields/QP_Net_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>QP_Net_Actual_Amount__c</fullName>
    <label>QP - Net Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>