force-app/main/default/objects/Sales_Data__c/fields/QP_Program_Percent__c.field-meta.xml
<CustomField>
    <fullName>QP_Program_Percent__c</fullName>
    <label>QP - Program %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>