force-app/main/default/objects/Sales_Data__c/fields/Reverse_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Accrual__c</fullName>
    <label>Reverse Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>