force-app/main/default/objects/Sales_Data__c/fields/Sales_Data_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Data_Key__c</fullName>
    <formula>Year__c + &apos;-&apos; + TEXT(Period__c) + &apos;-&apos; + TEXT(Period_End_Date__c) + &apos;-&apos; + Account__r.Name + &apos;-&apos; + Plant__c + &apos;-&apos; + Product_Family__c + &apos;-&apos; + Product__c + &apos;-&apos; +  Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Data Key</label>
    <type>Text</type>
</CustomField>