force-app/main/default/objects/Sales_Data__c/fields/Variance_Budget_USD__c.field-meta.xml
<CustomField>
    <fullName>Variance_Budget_USD__c</fullName>
    <formula>Actual_Forecast_USD__c  /  Budget_Amount_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Variance Budget USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>