force-app/main/default/objects/Sales_Data__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>text(YEAR(today()))</defaultValue>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>