force-app/main/default/objects/Sales_Data__c/recordTypes/Forecast_Sales_Data.recordType-meta.xml
<RecordType>
    <fullName>Forecast_Sales_Data</fullName>
    <active>true</active>
    <description>Used when creating forecasted Sales Data records from the Forecast VF page.</description>
    <label>Forecast Sales Data</label>
</RecordType>