force-app/main/default/objects/Sales_Data__c/recordTypes/Sales_Data_Record.recordType-meta.xml
<RecordType>
    <fullName>Sales_Data_Record</fullName>
    <active>true</active>
    <description>Used when creating normal Sales Data records.</description>
    <label>Sales Data Record</label>
</RecordType>