force-app/main/default/objects/Sales_Data__c/validationRules/Cannot_update_after_Actual_filled_in.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_update_after_Actual_filled_in</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;),
      OR (
           ISCHANGED (  Year__c ),
           ISCHANGED (  Period__c ),
           ISCHANGED (  Forecast_Amount__c )
          ),
      AND (
           NOT (ISBLANK (  Actual_Amount__c )),
           Actual_Amount__c &lt;&gt; 0
          )
     )</errorConditionFormula>
    <errorMessage>The Year, Period of Forecast Amount for this Sales Data record cannot be modified after the Actual Amount field is populated.</errorMessage>
</ValidationRule>