force-app/main/default/objects/Sales_Data__c/validationRules/Year_Must_Be_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Must_Be_Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER( Year__c ) )</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Year must be numeric.</errorMessage>
</ValidationRule>